--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".PasscodesApplication"
         android:allowBackup="true"
         android:icon="${appIcon}"
         android:label="${appLabel}"
