--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ koin = "4.1.1"
 agp = "8.13.1"
 kotlin-plugin = "2.1.21"
 ksp = "2.1.21-2.0.2"
-oss-license-plugin = "0.10.6" # latest safe version for oss-licenses-plugin
+oss-license-plugin = "0.10.9" # Also update in settings.gradle.kts
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
