--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,28 +27,47 @@ material = { module = "com.google.android.material:material", version.ref = "mat
 oss-license = { module = "com.google.android.gms:play-services-oss-licenses", version.ref = "oss-license" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 
+# Room
 room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 room-testing = { module = "androidx.room:room-testing", version.ref = "room" }
 
+# Networking
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp"}
 
+# Coroutines
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
+# Android Lifecycle
 lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 
+# Dependency Injection
 koin = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 # koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 
 json = { module = "org.json:json", version.ref = "json" }
 
+# Testing
 junit = { module = "junit:junit", version.ref = "junit" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-test-ext-junit" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
+
+[bundles]
+# Grouping related Android Architecture Components
+room = ["room-ktx", "room-testing"]
+lifecycle = ["lifecycle-runtime", "lifecycle-viewmodel"]
+
+# Grouping coroutines dependencies
+coroutines = ["coroutines-core", "coroutines-android"]
+coroutines-test = ["coroutines-core", "coroutines-test"] # Core is often needed for testing
+
+# Grouping general test dependencies
+unit-test = ["junit", "truth"]
+android-test = ["androidx-test-ext-junit", "espresso-core"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
