--- a/.github/workflows/build-apks.yml
+++ b/.github/workflows/build-apks.yml
@@ -38,8 +38,8 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
-          java-version: "17"
+          distribution: "jetbrains"
+          java-version: "21"
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
