--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,6 +12,9 @@
 name: "CodeQL"
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -56,6 +59,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: "jetbrains"
+          java-version: "21"
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
