--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,12 +12,15 @@
 name: "CodeQL"
 
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
+    paths-ignore:
+      - '**.md'
+      - '**.txt'
+      - '**.yml'
+      - 'docs/**'
+  
   release:
     types: [created, published]
 
@@ -65,6 +68,7 @@ jobs:
         with:
           distribution: "jetbrains"
           java-version: "21"
+          cache: 'gradle'
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
