--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 kotlin = "2.2.21"
+datastore = "1.1.7"
 material = "1.13.0"
 okhttp = "5.3.0"
 oss-license = "17.3.0"
@@ -19,6 +20,7 @@ compose-viewmodel = "2.9.4"
 nav3Core = "1.0.0-rc01"
 lifecycleViewmodelNav3 = "2.10.0-rc01"
 material3AdaptiveNav3 = "1.3.0-alpha03"
+koltinxSerializationJson = "1.3.2"
 
 # Plugin versions
 agp = "8.13.1"
@@ -48,6 +50,10 @@ androidx-material3-adaptive-navigation3 = { group = "androidx.compose.material3.
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 oss-license = { group = "com.google.android.gms", name = "play-services-oss-licenses", version.ref = "oss-license" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+
+# DataStore
+androidx-datastore = { module = "androidx.datastore:datastore", version.ref = "datastore" }
+koltinx-serialization-json = { module = "org.jetbrains.kotlinx:koltinx-serialization-json", version.ref = "koltinxSerializationJson" }
 
 # Room
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
@@ -105,6 +111,9 @@ koin = ["koin", "koin-compose"]
 # Grouping General Test Dependencies
 unit-test = ["junit", "truth"]
 android-test = ["androidx-test-ext-junit", "espresso-core"]
+
+# Grouping Datastore
+android-datastore = ["androidx-datastore", "koltinx-serialization-json"]
 
 
 [plugins]
