--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,11 +19,15 @@ compose-viewmodel = "2.9.4"
 nav3Core = "1.0.0-rc01"
 lifecycleViewmodelNav3 = "2.10.0-rc01"
 material3AdaptiveNav3 = "1.3.0-alpha03"
+datastorePreferences = "1.1.7"
+kotlinSerializationJson = "1.9.0"
 
 # Plugin versions
 agp = "8.13.1"
 ksp = "2.3.2"
 oss-license-plugin = "0.10.9" # Also update in settings.gradle.kts
+
+
 
 [libraries]
 # Kotlin Std libs
@@ -48,6 +52,10 @@ material = { group = "com.google.android.material", name = "material", version.r
 oss-license = { group = "com.google.android.gms", name = "play-services-oss-licenses", version.ref = "oss-license" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 
+# DataStore Preference
+androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastorePreferences" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinSerializationJson" }
+
 # Room
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
@@ -69,6 +77,7 @@ lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmode
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
 
+# Json
 json = { group = "org.json", name = "json", version.ref = "json" }
 
 # Testing
@@ -82,33 +91,39 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 
 
+
 [bundles]
-# Grouping Jetpack Compose Dependencies
+# Jetpack Compose Dependencies
 compose = ["compose-ui-material", "compose-ui-preview", "compose-activity", "compose-viewmodel"]
 compose-debug = ["compose-ui-tooling-debug"]
 
-# Grouping Navigation 3 Dependencies
+# Navigation 3 Dependencies
 navigation3 = ["androidx-navigation3-runtime", "androidx-navigation3-ui", "androidx-lifecycle-viewmodel-navigation3", "androidx-material3-adaptive-navigation3"]
 
-# Grouping Android Architecture Releated Components
+# Android Architecture Releated Components
 room = ["room-ktx", "room-testing"]
 lifecycle = ["lifecycle-runtime", "lifecycle-viewmodel"]
 
-# Grouping Coroutines Dependencies
+# DataStore Preference
+datastore-preferences = ["androidx-datastore-preferences", "kotlinx-serialization-json"]
+
+# Coroutines Dependencies
 coroutines = ["coroutines-core", "coroutines-android"]
 coroutines-test = ["coroutines-core", "coroutines-test"]
 
-# Grouping Dependency Injection Dependencies
+# Dependency Injection Dependencies
 koin = ["koin", "koin-compose"]
 
-# Grouping General Test Dependencies
+# General Test Dependencies
 unit-test = ["junit", "truth"]
 android-test = ["androidx-test-ext-junit", "espresso-core"]
+
 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 oss-licenses = { id = "com.google.android.gms.oss-licenses-plugin", version.ref = "oss-license-plugin" }
