--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/PasscodesTheme.Default"
         tools:targetApi="33">
+        <activity android:name=".ui.MainActivity" />
         <activity
-            android:name=".ui.MainActivity"
-            android:exported="true"
-            android:theme="@style/PasscodesTheme.Default">
+            android:name=".oldui.MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".oldui.MainActivity"
-            android:exported="true">
         </activity>
         <activity android:name=".oldui.PasswordManagerActivity" />
         <activity android:name=".oldui.SavePasswordActivity" />
