--- a/autofill/src/main/AndroidManifest.xml
+++ b/autofill/src/main/AndroidManifest.xml
@@ -1,4 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <application>
+        <activity android:name=".AutofillSettingsActivity" />
+
+        <service
+            android:name=".PasswordAutofillService"
+            android:exported="true"
+            android:label="${appLabel}"
+            android:permission="android.permission.BIND_AUTOFILL_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.autofill.AutofillService" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.autofill"
+                android:resource="@xml/autofill_service" />
+        </service>
+    </application>
 </manifest>
