--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".oldui.PasswordManagerActivity" />
-        <activity android:name=".oldui.SavePasswordActivity" />
-        <activity android:name=".oldui.LoadPasswordActivity" />
-        <activity android:name=".oldui.ViewPasswordActivity" />
-        <activity android:name=".oldui.UpdatePasswordActivity" />
+        <activity android:name=".password_manager.oldui.PasswordManagerActivity" />
+        <activity android:name=".password_manager.oldui.SavePasswordActivity" />
+        <activity android:name=".password_manager.oldui.LoadPasswordActivity" />
+        <activity android:name=".password_manager.oldui.ViewPasswordActivity" />
+        <activity android:name=".password_manager.oldui.UpdatePasswordActivity" />
         <activity android:name=".oldui.SettingsActivity" />
         <activity android:name=".oldui.AboutUsActivity" />
         <activity android:name=".oldui.LicenseActivity" />
