ci: update dependabot configuration for gradle

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,7 @@ updates:
   - package-ecosystem: "gradle" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
-      interval: "weekly"
+      day: "sunday"
+    target-branch: "jeel-dev"
+    assignees:
+      - "JeelDobariya38"
