ci: fix issue https://github.com/PasscodesApp/Passcodes/pull/53/checks?check_run_id=57514014091

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,7 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       day: "sunday"
+      interval: "weekly"
     target-branch: "jeel-dev"
     assignees:
       - "JeelDobariya38"
