--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,10 @@
 [versions]
+# Main versions
+androidMinSdk = "26"
+androidTargetSdk = "34"
+androidCompileSdk = "36"
+
+# Library versions
 coreKtx = "1.17.0"
 material = "1.13.0"
 okhttp = "5.3.2"
