--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,10 @@
         android:name=".PasscodesApplication"
         android:allowBackup="true"
         android:icon="${appIcon}"
-        android:label="${appLabel}"
+        android:label="@string/app_name"
         android:localeConfig="@xml/locales_config"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="${appRoundIcon}"
         android:supportsRtl="true"
         android:theme="@style/PasscodesTheme.Default"
         tools:targetApi="33">
