--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 # Library versions
 coreKtx = "1.17.0"
 material = "1.13.0"
+nav3Core = "1.0.0"
 okhttp = "5.3.2"
 oss-license = "17.3.0"
 appcompat = "1.7.1"
@@ -44,6 +45,10 @@ androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx"
 material = { module = "com.google.android.material:material", version.ref = "material" }
 oss-license = { module = "com.google.android.gms:play-services-oss-licenses", version.ref = "oss-license" }
 appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
+
+# Core Navigation 3 libraries
+androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "nav3Core" }
+androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3Core" }
 
 # DataStore Preference
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
