refactor: rename MainActivity -> JetpackPreviewLayoutActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/PasscodesTheme.Default"
         tools:targetApi="33">
-        <activity android:name=".ui.MainActivity" />
+        <activity android:name=".ui.JetpackPreviewLayoutActivity" />
         <activity
             android:name=".oldui.MainActivity"
             android:exported="true">
