--- a/.github/workflows/build-apks.yml
+++ b/.github/workflows/build-apks.yml
@@ -22,7 +22,7 @@ on:
 
 jobs:
   build_and_upload_apk:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
 
     steps:
       - name: Checkout Repository
