--- a/.github/workflows/build-apks.yml
+++ b/.github/workflows/build-apks.yml
@@ -9,11 +9,13 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - '**.md'
-      - '**.txt'
-      - '**.yml'
-      - 'docs/**'
+    paths:
+      - '**'
+      - '!**.md'
+      - '!**.txt'
+      - '!**.yml'
+      - '!docs/**'
+      - '.github/workflows/**.yml'
 
   release:
     types:
